# rdf-editor

./: .gitignore copy  Cargo.toml  README.md  env-example.txt
src/: cache.rs  config.rs  error.rs  main.rs  models.rs  sparql.rs  transaction_log.rs  validation.rs
src/handlers/: batch.rs  handlers.rs  health.rs  import_export.rs  mod.rs  query.rs  transaction.rs  update.rs
static/: app.js  index.html  style.css
