[package]
name = "rdf-editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdf-editor"
path = "src/main.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
base64 = "0.21"
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
urlencoding = "2.1"

[dev-dependencies]
actix-rt = "2"